--- a/package.json
+++ b/package.json
@@ -1,21 +1,19 @@
 {
-  "name": "buffer-equal-constant-time",
-  "version": "1.0.1",
-  "description": "Constant-time comparison of Buffers",
+  "name": "afghans-in-america",
+  "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "mocha test.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": "git@github.com:goinstant/buffer-equal-constant-time.git",
-  "keywords": [
-    "buffer",
-    "equal",
-    "constant-time",
-    "crypto"
-  ],
-  "author": "GoInstant Inc., a salesforce.com company",
-  "license": "BSD-3-Clause",
-  "devDependencies": {
-    "mocha": "~1.15.1"
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.4.4"
   }
 }
